@@ -123,7 +123,7 @@ ROOT_DIR = /usr/local/www/apache22/ispcp
 
 ROOT_USER = root
 
-ROOT_GROUP = root
+ROOT_GROUP = wheel
 
 GUI_ROOT_DIR = /usr/local/www/apache22/ispcp/gui
 
